
2021-08-30  Simon Sobisch <simonsobisch@gnu.org>

	* general: fix local includes to use "local" instead of <system>
	* reportio.c: remove unused variables/code,
	  remove duplicated includes coming from fileio.h
	* fextfh.c (copy_fcd_to_file): only access key structure for INDEXED files

2021-08-29  Ron Norman <rjn@inglenet.com>

	* fileio.c: Adjust record size up to minimum for the file
	* fextfh.c: Only check for missing record address if an I/O request
	           Do not check for OPEN/CLOSE operations

2021-08-27  Simon Sobisch <simonsobisch@gnu.org>

	* fileio.c (cob_file_open) [!HAVE_UNISTD_H || _WIN32]: also support
	  ASSIGN to :CI:, :CO:, :CE: in these cases

2021-08-25  Ron Norman <rjn@inglenet.com>

	* common.h: Replaced report.resume with report.go_label
	* reportio.c: Rework callback to application to use 
	             "switch (go_label) case  goto xxx"
	* fextfh.c: If record address changes, force rebuild of key info 

2021-08-23  Ron Norman <rjn@inglenet.com>

	* fileio.c: cob_key_def only set 39 if 'keycheck' was requested
	* fextfh.c: If FCD record address changes, make required updates

2021-08-18  Ron Norman <rjn@inglenet.com>

	* fileio.c: If 'record' is not allocated when reading filename.dd
	         then allocate one
	* fextfh.c: Check for key field defined before using it

2021-08-07  Ron Norman <rjn@inglenet.com>

	* common.h: Added new fields for REPORT structures
	* reportio.c: Rework callback to application to use "goto *pointer"
	          Additional changes as each LINE now has its own data area
			  The cob_report now has a version which is checked at runtime
			  The format of cob_report I/O routines changed

2021-07-12  Ron Norman <rjn@inglenet.com>

	* fextfh.c: Check FCD-CURRENT-REC-LEN being changed on WRITE/REWRITE

2021-07-02  Simon Sobisch <simonsobisch@gnu.org>

	* reportio.c: move hard line/col limit to REPORT_MAX_LINES REPORT_MAX_COLS
	* reportio.c (write_rec): changed to completely use cob_write